# cvffmpeg

./: CMakeLists.txt  FrameWriter.cpp  FrameWriter.h  PyFrameWriter.pyx  cap_ffmpeg_impl.h  cap_ffmpeg_legacy_api.h  ffmpeg_codecs.h  main.cpp  setup.py  test.py
